--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 current_version = 1.0.0
 commit = True
 tag = True
-message = 'chore: Release {new_version}'
+message = chore: Release {new_version}
 
 [bumpversion:file:setup.py]
 search = version='{current_version}'
